--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "express-session": "^1.11.3",
     "mongoose": "^4.1.0",
     "passport": "^0.3.0",
-    "passport-github": "^1.0.0"
+    "passport-github": "^1.0.0",
+    "body-parser": "~1.13.2",
+    "client-sessions" : "*"
   }
 }
